--- a/mybatis_cache/pom.xml
+++ b/mybatis_cache/pom.xml
@@ -5,29 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wd.mybatis</groupId>
-    <artifactId>mybatis_helloworld</artifactId>
+    <artifactId>mybatis_cache</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <packaging>jar</packaging>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
+    <packaging>jar</packaging>
     <dependencies>
-        <!--Maven依赖-->
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
-        </dependency>
         <!-- Mybatis核心 -->
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -53,9 +39,6 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
-
     </dependencies>
-
-
 
 </project>
