--- a/mybatis_mbg/pom.xml
+++ b/mybatis_mbg/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.16</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.2.0</version>
+        </dependency>
     </dependencies>
     <!-- 控制Maven在构建过程中相关配置 -->
     <build>
