--- a/spring_mvc_helloworld/src/main/webapp/WEB-INF/web.xml
+++ b/spring_mvc_helloworld/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-<!--配置SpringMVC的前端控制器DispatcherServlet-->
+<!--配置SpringMVC的前端控制器DispatcherServlet
+    SpringMVC的配置文件默认位置和名称：
+    位置：WEB-INF下
+    名称：<servlet-name>-servlet.xml，当前配置下的文件名为SpringMVC-servlet.xml
+-->
     <servlet>
         <servlet-name>SpringMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+<!--设置SpringMVC配置文件的位置和名称-->
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:springmvc.xml</param-value>
+        </init-param>
+<!--服务器开启时就进行DispatcherServlet前端控制器初始化-->
+        <load-on-startup>1</load-on-startup>
     </servlet>
+
+
 <!--url-pattern中/和/*的区别
     /：匹配浏览器向服务器发送的所有请求(不包括.jsp)
     /*：匹配浏览器向服务器发送的所有请求(包括.jsp)
