--- a/spring_mvc_rest/src/main/webapp/WEB-INF/web.xml
+++ b/spring_mvc_rest/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,16 @@
         <filter-name>CharacterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-<!--SpringMVC前端控制器-->
+    <!-- 增加HiddenHttpMethodFilter过滤器：目的是给普通浏览器 增加 put|delete请求方式 -->
+    <filter>
+        <filter-name>HiddenHttpMethodFilter</filter-name>
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>HiddenHttpMethodFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <!--SpringMVC前端控制器-->
     <servlet>
         <servlet-name>SpringMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
