--- a/spring_mvc_ajax/src/main/webapp/WEB-INF/web.xml
+++ b/spring_mvc_ajax/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,7 @@
             <param-name>contextConfigLocation</param-name>
             <param-value>classpath:springmvc.xml</param-value>
         </init-param>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>SpringMVC</servlet-name>
